# vtagent

./: .cursorignore  .env.example  .gitignore  .mcp.json  .vtagentgitignore  .vtcodegitignore  AGENTS.md  CHANGELOG.md  Cargo.example.toml  Cargo.standalone.toml  Cargo.toml  MULTI_AGENT_IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP.md  config.toml  nextest.toml  release.toml  run.sh  rust-toolchain.toml  test_tool_policy.rs  tool-eval.json  user-context.md  vtagent.toml  vtagent.toml.example  vtcode.toml  vtcode.toml.example
.codex/: config.json  (+1 more)
vtagent-core/: Cargo.toml
vtagent-core/examples/: anstyle_ls_example.rs  anstyle_parse_example.rs  anstyle_test.rs  dialoguer_example.rs  migration_test.rs  test_anstyle.rs
vtagent-core/src/: advanced_code_editing.rs  api_keys.rs  apply_patch.rs  ast_grep.rs  async_file_ops.rs  bash_runner.rs  code_completion.rs  code_completion_legacy.rs  code_quality_tools.rs  code_quality_tools_legacy.rs  config.rs  config_legacy.rs  constants.rs  context_analyzer.rs  context_suggestions.rs  conversation_summarizer.rs  decision_tracker.rs  decision_tracker_test.rs  diff_renderer.rs  enhanced_file_ops.rs  enhanced_tools.rs  error_recovery.rs  file_search.rs  gemini.rs  gemini_legacy.rs  gemini_new.rs  lib.rs  main.rs  markdown_renderer.rs  markdown_storage.rs  models.rs  orchestrator_retry.rs  performance_monitor.rs  performance_profiler.rs  project.rs  pty_renderer.rs  rp_search.rs  rp_search_standalone.rs  safety.rs  simple_indexer.rs  (+10 more)
vtagent-core/src/agent/: compaction.rs  config.rs  core.rs  engine.rs  examples.rs  integration.rs  intelligence.rs  mod.rs  multi_agent.rs  multi_agent_tools.rs  optimization.rs  orchestrator.rs  performance.rs  runner.rs  semantic.rs  snapshots.rs  stats.rs  types.rs  verification.rs
vtagent-core/src/cli/: args.rs  args.rs.broken  commands.rs  man_pages.rs  mod.rs  models_commands.rs  rate_limiter.rs  tool_policy_commands.rs
vtagent-core/src/code/code_completion/: mod.rs
vtagent-core/src/code/code_quality/: mod.rs
vtagent-core/src/code_completion/: mod.rs
vtagent-core/src/code_completion/cache/: mod.rs
vtagent-core/src/code_completion/context/: analyzer.rs  mod.rs
vtagent-core/src/code_completion/engine/: mod.rs  ranking.rs  suggestions.rs
vtagent-core/src/code_completion/languages/: mod.rs  python.rs  rust.rs  typescript.rs
vtagent-core/src/code_quality/: mod.rs
vtagent-core/src/commands/: analyze.rs  ask.rs  compress_context.rs  create_project.rs  init.rs  stats.rs  validate.rs
vtagent-core/src/config/: api_keys.rs  constants.rs  context.rs  mod.rs  models.rs  provider_abstraction.rs  router.rs  telemetry.rs
vtagent-core/src/core/: context_compression.rs  decision_tracker.rs  dspy_test_harness.rs  error_recovery.rs  mod.rs  orchestrator_retry.rs  performance_monitor.rs  performance_profiler.rs  prompt_caching.rs  prompt_optimizer.rs  router.rs  timeout_detector.rs  trajectory.rs
vtagent-core/src/gemini/: mod.rs
vtagent-core/src/llm/: client.rs  error_display.rs  error_display_test.rs  factory.rs  mod.rs  provider.rs  stream.rs  types.rs
vtagent-core/src/llm_modular/: client.rs  mod.rs
vtagent-core/src/prompts/: generator.rs  mod.rs  system.md  system.rs  templates.rs
vtagent-core/src/prompts_modular/: generator.rs  mod.rs
vtagent-core/src/telemetry/: profiler.rs
vtagent-core/src/tools/: advanced_search.rs  ast_grep.rs  ast_grep_tool.rs  bash_tool.rs  cache.rs  cache_e2e_tests.rs  cache_tests.rs  ck_tool.rs  command.rs  file_ops.rs  file_search.rs  grep_search.rs  mod.rs  registry.rs  rg_search.rs  rp_search.rs  search.rs  simple_search.rs  speckit.rs  srgn.rs  traits.rs  types.rs
vtagent-core/src/tree_sitter/: analysis.rs  analyzer.rs  languages.rs  mod.rs  navigation.rs  refactoring.rs
vtagent-core/src/types/: mod.rs
vtagent-core/src/ui/: anstyle_parse_utils.rs  diff_renderer.rs  markdown.rs  mod.rs  spinner.rs  styled.rs  theme.rs  user_confirmation.rs
vtagent-core/src/utils/: ansi.rs  async_file_ops.rs  colors.rs  dot_config.rs  mod.rs  safety.rs  utils.rs  vtagentgitignore.rs
vtagent-core/tests/: ast_grep_tool_test.rs  config_loader_test.rs  delete_file_tool.rs  embeddings_test.rs  multi_agent_config_test.rs  project_test.rs  pty_test.rs  pty_tests.rs  router_test.rs  speckit_tool_test.rs
vtcode-core/: Cargo.toml
vtcode-core/examples/: anstyle_test.rs  dialoguer_example.rs  migration_test.rs  test_anstyle.rs
vtcode-core/src/: constants.rs  lib.rs  mcp_client.rs  project.rs  project_doc.rs  safety.rs  simple_indexer.rs  tool_policy.rs  types.rs
vtcode-core/src/cli/: args.rs  commands.rs  man_pages.rs  mod.rs  models_commands.rs  tool_policy_commands.rs
vtcode-core/src/code/: mod.rs
vtcode-core/src/commands/: analyze.rs  ask.rs  compress_context.rs  mod.rs  stats.rs  validate.rs
vtcode-core/src/config/: api_keys.rs  constants.rs  context.rs  mcp.rs  mod.rs  models.rs  router.rs  telemetry.rs
vtcode-core/src/core/: context_compression.rs  mod.rs  orchestrator_retry.rs  performance_monitor.rs  performance_profiler.rs  prompt_caching.rs  router.rs  trajectory.rs
vtcode-core/src/llm/: client.rs  error_display.rs  factory.rs  mod.rs  provider.rs  types.rs
vtcode-core/src/prompts/: config.rs  context.rs  system.rs
vtcode-core/src/tools/: advanced_search.rs  apply_patch.rs  ast_grep.rs  ast_grep_tool.rs  cache.rs  cache_e2e_tests.rs  cache_tests.rs  command.rs  curl_tool.rs  file_ops.rs  file_search.rs  grep_search.rs  mod.rs  plan.rs  search.rs  simple_search.rs  srgn.rs  traits.rs  types.rs
vtcode-core/src/ui/: diff_renderer.rs  iocraft.rs  markdown.rs  mod.rs  ratatui.rs  slash.rs  spinner.rs  streaming.rs  styled.rs  terminal.rs  theme.rs  tui.rs  user_confirmation.rs
vtcode-core/src/utils/: ansi.rs  colors.rs  dot_config.rs  mod.rs  safety.rs  session_archive.rs  transcript.rs  utils.rs  vtcodegitignore.rs
vtcode-core/tests/: ast_grep_tool_test.rs  config_loader_test.rs  delete_file_tool.rs  mcp_basic_test.rs  mcp_integration_e2e.rs  mcp_integration_test.rs  project_test.rs  pty_test.rs  pty_tests.rs  router_test.rs
(+500 files in other folders)
