[package]
name = "vtagent"
version = "0.1.3"
edition = "2024"
default-run = "vtagent"

[workspace]
members = ["vtagent-core", "tools"]

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
uninlined_format_args = "deny"
unwrap_used = "deny"

[dependencies]
vtagent-core = { path = "vtagent-core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = [
    "full",
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"
walkdir = "2.5"
glob = "0.3"
thiserror = "1.0"
console = "0.15"
colored = "2.1"
indicatif = "0.17"
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.13"
termimad = "0.31"
regex = "1.10"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
flate2 = "1.0"
pathdiff = "0.2" # For path operations
tempfile = "3.0"
rayon = "1.8" # For parallel processing
lru = "0.12"
dashmap = "5.5" # For concurrent hash maps
once_cell = "1.19"
lazy_static = "1.4" # For lazy static initialization
sha2 = "0.10"
chrono = { version = "0.4", features = [
    "serde",
] } # For timestamp handling in CLI
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
terminal_size = "0.4.3"
is-terminal = "0.4.16"
async-trait = "0.1.89"
# ANSI styling
anstyle = "1.0"
anstyle-query = "1.0"
anstream = "0.6"
sysinfo = "0.37.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
strip = true
panic = "abort"

[[bin]]
name = "vtagent"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
rexpect = "0.6.2"
dialoguer = "0.9"
