[package]
name = "vtcode"
version = "0.15.0"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "A Rust-based terminal coding agent with modular architecture supporting multiple LLM providers"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
keywords = ["ai", "coding", "agent", "llm", "cli"]
categories = ["command-line-utilities", "development-tools", "api-bindings"]
exclude = [
    "target/",
    ".github/",
    "docs/",
    "scripts/",
    "screenshots/",
    "logs/",
    "prompts/",
]
default-run = "vtcode"

[workspace]
members = ["tools", "vtcode-core"]

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
uninlined_format_args = "deny"
unwrap_used = "deny"

[dependencies]
vtcode-core = { path = "vtcode-core", version = "0.15.0" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = [
    "full",
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"
walkdir = "2.5"
glob = "0.3"
thiserror = "1.0"
console = "0.15"
colored = "2.1"
indicatif = "0.17"
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.13"
termimad = "0.31"
regex = "1.10"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
flate2 = "1.0"
pathdiff = "0.2" # For path operations
tempfile = "3.0"
rayon = "1.8" # For parallel processing
lru = "0.12"
dashmap = "5.5" # For concurrent hash maps
once_cell = "1.19"
lazy_static = "1.4" # For lazy static initialization
sha2 = "0.10"
chrono = { version = "0.4", features = [
    "serde",
] } # For timestamp handling in CLI
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
terminal_size = "0.4.3"
is-terminal = "0.4.16"
async-trait = "0.1.89"
unicode-width = "0.1"
# ANSI styling
anstyle = "1.0"
anstyle-query = "1.0"
anstream = "0.6"
sysinfo = "0.37.0"
syntect = "5.2"
termion = "4.0"
colorchoice = "1.0"
anstyle-git = "1.1"
anstyle-ls = "1.0"
cfonts = "1.3"

[features]
default = ["tool-chat"]
tool-chat = []

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

[[bin]]
name = "vtcode"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
dialoguer = "0.9"
