[package]
name = "vtagent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.37", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
    "fs",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"
walkdir = "2.5"
glob = "0.3"
thiserror = "1.0"
console = "0.15"
owo-colors = "4.0"
termimad = "0.31"
regex = "1.10"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
flate2 = "1.0" # For compression in performance module
pathdiff = "0.2" # For path operations
tempfile = "3.0" # For temporary files in tests
rayon = "1.8" # For parallel processing
lru = "0.12" # For LRU caching
dashmap = "5.5" # For concurrent hash maps
once_cell = "1.19" # For lazy static initialization
lazy_static = "1.4" # For lazy static initialization
sha2 = "0.10" # For checksum calculation in snapshots
chrono = { version = "0.4", features = [
    "serde",
] } # For timestamp handling in CLI
aes-gcm = "0.10" # For AES-256-GCM encryption of snapshots
argon2 = "0.5" # For key derivation from passwords
rand = "0.8" # For random number generation
is-terminal = "0.4"
terminal_size = "0.3"
# BubbleTea TUI dependencies
bubbletea-rs = "0.0.7"
bubbletea-widgets = "0.1.11"
lipgloss-extras = { version = "0.1.0", features = ["full"] }
crossterm = "0.27"


[features]
default = []
swift = ["tree-sitter-swift"]

[dependencies.tree-sitter-swift]
version = "=0.7.1"
optional = true
