[package]
name = "vtagent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap-help = "1.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.37", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"
walkdir = "2.5"
glob = "0.3"
thiserror = "1.0"
console = "0.15"
dialoguer = "0.11"
owo-colors = "4.0"
termimad = "0.34"
regex = "1.10"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
flate2 = "1.0"
pathdiff = "0.2" # For path operations
tempfile = "3.0"
rayon = "1.8" # For parallel processing
lru = "0.12"
dashmap = "5.5" # For concurrent hash maps
once_cell = "1.19"
lazy_static = "1.4" # For lazy static initialization
sha2 = "0.10"
chrono = { version = "0.4", features = [
    "serde",
] } # For timestamp handling in CLI
aes-gcm = "0.10"
humantime = "2.1"
argon2 = "0.5"
rand = "0.8"
terminal_size = "0.4.3"
is-terminal = "0.4.16"
async-trait = "0.1.89"
indicatif = "0.17"
# PTY support
rexpect = "0.6.2"
# Dotenv support
dotenvy = "0.15"
# Home directory detection
dirs = "5.0"
# YAML support
serde_yaml = "0.9"

[features]
default = []
swift = ["tree-sitter-swift"]

[dependencies.tree-sitter-swift]
version = "=0.7.1"
optional = true
